# MyScraper

./: .coverage  .gitignore  IMPROVEMENTS.md  README.md  SECURITY.md  StructureReadMe.md  ToDoReadMe.md  check_stock.py  config.py  coverage.xml  notifications.py  pyproject.toml  pytest.ini  requirements.txt  scraper.py  vercel.json
.github/: dependabot.yml
.github/workflows/: codeql.yml  daily-backup.yml  dependabot.yml  fuzz.yml  main.yml  monthly-cleanup.yml  publish.yml  pull-request.yml  python-tests.yml  schedule.yml  scorecard.yml
fuzz/: README.md  fuzz_check_stock.py  fuzz_config.py  fuzz_notifications.py  fuzz_scraper.py
myscraper/: check_stock.py
scripts/: api_utils.py  check_stock.py  config.py  export_kv_snapshot.py  notifications.py  notifications_util.py  product_checker.py  scraper.py  stock_utils.py
tests/: conftest.py  test_check_stock.py  test_config.py  test_notifications.py  test_scraper.py
tests/js/: login.test.mjs  subscription-modal.test.mjs  utils.test.mjs
web/: admin.html  index.html  lucide-icons.js  package-lock.json  package.json  particles.js  style.css  user.html
web/api/: _kv-helpers.js  artifact.js  configuration.js  data-store.js  disable.js  dispatch.js  email-blast.js  enable.js  github.js  login.js  logs.js  products.js  recipients.js  run.js  runs.js  status.js  stock-counters.js  subscriptions.js  user-login.js
web/components/: admin-main.js  config.js  icons.js  login-main.js  login.css  login.js  main.js  products-ui.js  recipients-ui.js  runs.js  status.js  style.css  subscription-modal.js  subscriptions-ui.js  (+2 more)
(+56 files in other folders)
