[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "myscraper"
version = "0.1.0"
authors = [
    {name = "tyagishubham177"}
]
description = "Automated stock checker for Amul store"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.12.3",
    "playwright==1.42.0",
    "requests==2.32.2",
    "aiohttp==3.9.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1"
]

[project.scripts]
myscraper-check = "myscraper.check_stock:cli"
